upgraded to JDK 11